update db connection

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
-DBSUPABASEPASSWORD=RrF8Sxnnx79QP1qx
-NEXT_PUBLIC_SUPABASE_URL=https://lxjasjsqekjnnepswnlk.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_eZuP7aUVayAGzpSW6FGqKQ_yzcWeGcQ
+DBSUPABASEPASSWORD=6rWok4ELYJKNnFg7
+DATABASE_MODE=supabase # local / supabase
+NEXT_PUBLIC_SUPABASE_URL=https://bwvxkrqjxyrrfmduowan.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_A8hyZstLQnyM8E0zbaRBqg_I2f-cc1q
+DATABASE_URL=postgresql://postgres.bwvxkrqjxyrrfmduowan:6rWok4ELYJKNnFg7@aws-1-ap-south-1.pooler.supabase.com:6543/postgres
+JWT_SECRET=hwCM9Jl8mjBuZxNiMDavBwBorXfE66jsombyfEX1ZAi
