fixing production error

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
-DBSUPABASEPASSWORD=6rWok4ELYJKNnFg7
+DBSUPABASEPASSWORD=QflSgPG6tsB6EPf0
 DATABASE_MODE=supabase # local / supabase
-NEXT_PUBLIC_SUPABASE_URL=https://bwvxkrqjxyrrfmduowan.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_A8hyZstLQnyM8E0zbaRBqg_I2f-cc1q
-DATABASE_URL=postgresql://postgres.bwvxkrqjxyrrfmduowan:6rWok4ELYJKNnFg7@aws-1-ap-south-1.pooler.supabase.com:6543/postgres
+NEXT_PUBLIC_SUPABASE_URL=https://jkwmxmqgyeyneuouqsem.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_m1LaOwgYglGSvul5JzTNgA_bJg1JTLe
+DATABASE_URL=postgresql://postgres.jkwmxmqgyeyneuouqsemQflSgPG6tsB6EPf0@aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres
 JWT_SECRET=hwCM9Jl8mjBuZxNiMDavBwBorXfE66jsombyfEX1ZAi
